# webview2_installer

./: .gitignore  Cargo.toml  LICENSE  MANIFEST.in  README.md  build.ps1  build.py  build_dll.py  pyproject.toml  webview2_installer.py  webview2_installer.pyi  webview2_installer.rs  wheel.json
.github/workflows/: build_test.yml  publish.yml
webview2_installer/: __init__.py
