[package]
name = "webview2_installer"
version = "1.0.0"
edition = "2021"

[lib]
name = "webview2_installer"
crate-type = ["cdylib"]
path = "webview2_installer.rs"

[target.'cfg(windows)'.dependencies]
winreg = "0.56"
reqwest = { version = "0.13.3", features = ["blocking", "native-tls"] }
tempfile = "3.8"
indicatif = "0.18.4"
#pyo3 = "0.28.3"

[target.'cfg(not(windows))'.dependencies]

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
